# beets-bruteforce

./: CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/workflows/: main.yml
beetsplug/: bruteforce.py
src/: widget.py
tests/: test_bruteforce.py  test_widget.py
