[project]
name =  "beets-bruteforce"
authors = [
    {name = "Sean Farley", email = "sean@farley.io"},
]
description = "A beets plugin to import a single song by brute-force"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: AGPLv3 License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = []

[project.optional-dependencies]
test = [
    "check-manifest==0.49",
    "flake8-bugbear==23.5.9",
    "flake8-docstrings==1.7.0",
    "flake8==6.0.0",
    "flake8-pytest-style==1.7.2",
    "flake8-pyproject==1.2.3",
    "flake8-black==0.3.6",
    "pytest-flake8 @ git+https://github.com/Et7f3/pytest-flake8@0d6eae30c3a3169a53873e77ee68ac20eb300cf9",
    "pytest-github-actions-annotate-failures==0.2.0",
]

[project.urls]
Documentation = "https://github.com/seanfarley/beets-bruteforce/tree/main#readme"
Source = "https://github.com/seanfarley/beets-bruteforce"
Tracker = "https://github.com/seanfarley/beets-bruteforce/issues"

[tool.black]
line-length = 80
fast = true

[tool.flake8]
max-line-length = 80
select = "F,E,W,B,B901,B902,B903"
exclude = [
    ".eggs",
    ".git",
    ".tox",
    "nssm",
    "obj",
    "out",
    "packages",
    "pywin32",
    "tests",
]
ignore = [
]

[tool.pytest.ini_options]
addopts = "--flake8"
pythonpath = [
  "src",
]
testpaths = "tests"
