[project]
name =  "beets-bruteforce"
authors = [
    {name = "Sean Farley", email = "sean@farley.io"},
]
description = "A beets plugin to import a single song by brute-force"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: AGPLv3 License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
      "beautifulsoup4>=4.12.0",
      "beets>=1.6.0",
      "requests>=2.28.0",
      "wikipedia>=1.4.0",
]

[project.optional-dependencies]
test = [
    "check-manifest==0.49",
    "ruff==0.0.272",
    "pytest-black-ng==0.4.1",
    "pytest-ruff==0.1",
    "pytest-github-actions-annotate-failures==0.2.0",
]

[project.urls]
Documentation = "https://github.com/seanfarley/beets-bruteforce/tree/main#readme"
Source = "https://github.com/seanfarley/beets-bruteforce"
Tracker = "https://github.com/seanfarley/beets-bruteforce/issues"

[tool.black]
line-length = 80
fast = true

[tool.ruff]
line-length = 80

[tool.pytest.ini_options]
addopts = "--black --ruff"
pythonpath = [
  "beetsplug",
]
testpaths = [
  "beetsplug",
  "tests",
]
